# vibe-data-science

./: CLAUDE.md  README.md  pyproject.toml
configs/models/: random_forest_grid.yaml
configs/pipelines/: cross_validation.yaml  feature_exploration.yaml  grid_search_rf.yaml  grid_search_svm.yaml  optimized_random_forest.yaml  reduced_feature_set.yaml  svm_linear.yaml
docs/: configs.md  datasets.md  problem.md
mlruns/0/: meta.yaml
mlruns/0/01b9ed7e8cd34dfa916d37cdfb75fb53/: meta.yaml
mlruns/0/4abe708ce2824629964d6b0d6bc203b1/: meta.yaml
mlruns/0/51448eef2d764c5f8dc21c60ec08e7c1/: meta.yaml
mlruns/0/94cff7b311384a6988514af9a027e7f6/: meta.yaml
mlruns/0/a7a324e907564db6828afa4a34454eb4/: meta.yaml
mlruns/0/add4ede563924c9e9ee8a663e0a6c3a8/: meta.yaml
mlruns/0/addba8fc10244ebba322bc36fe4fa844/: meta.yaml
mlruns/0/b4e7b8574f1448f89c5b00c7f411a8d0/: meta.yaml
mlruns/0/f7898c57642c4f6aafa262aa584226fa/: meta.yaml
mlruns/0/ff48b03dcf894cf99d8021dc37b10a30/: meta.yaml
mlruns/144014724387327659/: meta.yaml
mlruns/144014724387327659/4ecda82212b84bba898bd3cd3ab3866f/: meta.yaml
mlruns/144014724387327659/4f33f602e7ac4676a8cfadd0515dcd66/: meta.yaml
mlruns/144014724387327659/50a71c5d33564399b269d1dc2581a903/: meta.yaml
mlruns/144014724387327659/59037e1b495349818cad9a9541c42281/: meta.yaml
mlruns/144014724387327659/7fca53c61b354a09bab0604dc5f235c7/: meta.yaml
mlruns/144014724387327659/9c445ca967c64dab9fdbbb9f6e6143b6/: meta.yaml
mlruns/814251661916464625/: meta.yaml
scripts/: run_pipeline.py
src/vibe_data_science/: __init__.py  main.py
(+99 files in other folders)
