[project]
name = "vibe-data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "snrsw", email = "ale.nnn.r@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
