[project]
name = "vibe-data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "snrsw", email = "ale.nnn.r@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.2",
    "mlflow>=3.1.4",
    "polars>=1.31.0",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "kaggle>=1.7.4.5",
]
