[project]
name = "vibe-data-science"
version = "0.1.0"
description = "Vibe Data Science project"
readme = "README.md"
authors = [
    { name = "snrsw", email = "xxx@yyy.com" }
]
requires-python = ">=3.11"

[project.scripts]
vibe = "vibe_data_science.main:main"
dependencies = [
    "duckdb>=1.3.2",
    "mlflow>=3.1.4",
    "polars>=1.31.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.0.0",
    "structlog>=25.4.0",
    "rich>=14.1.0",
    "dbt-duckdb>=1.9.4",
    "pyyaml>=6.0.0",
    "scikit-learn>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "kaggle>=1.7.4.5",
    "pytest>=8.4.1",
]
